--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,14 @@
         "fideloper/proxy": "^4.0",
         "kartik-v/bootstrap-star-rating": "dev-master",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "phpunit/phpunit": "^7.3"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "nunomaduro/collision": "^2.0"
     },
     "autoload": {
         "classmap": [
